# face-detector-fast-api

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
src/face_detector/: __init__.py  app.py  constants.py  db.py  model.py
